--- a/src/_includes/_partials/patch-note.njk
+++ b/src/_includes/_partials/patch-note.njk
@@ -20,8 +20,13 @@
       {% if loop.first %}<ul class="list">{% endif %}
         <li class="list__item">
           <a class="list__link" href="{{ note.url | url }}">
-            <h6 class="list__title">{{ note.data.title }}</h6>
-            <p class="list__description">{{ note.date | humanReadableFormat }}</p>
+            <div class="list__deck">
+              <div class="list__subdeck list__subdeck--growth">
+                <h6 class="list__title">{{ note.data.title }}</h6>
+                <p class="list__description">{{ note.date | humanReadableFormat }}</p>
+              </div>
+              <div class="list__subdeck"><span class="badge badge--secondary badge--rounded">{{ note.data.author }}</span></div>
+            </div>
           </a>
         </li>
       {% if loop.last %}</ul>{% endif %}
