--- a/src/_includes/_partials/head.njk
+++ b/src/_includes/_partials/head.njk
@@ -60,6 +60,8 @@
   <link rel="canonical" href="{{ app.url }}"/>
   <!-- <link rel="amphtml" href="*.amp'/> -->
 
+  <link rel="image_src" href="{{ app.url }}/images/baythium-ecosystem.png"/>
+
   <link rel="alternate" hreflang="en" href="{{ app.url }}/"/>
   <link rel="alternate" hreflang="de" href="{{ app.url }}/de/"/>
   <link rel="alternate" hreflang="ru" href="{{ app.url }}/ru/"/>
