--- a/src/_includes/_partials/head.njk
+++ b/src/_includes/_partials/head.njk
@@ -60,6 +60,7 @@
   <link rel="canonical" href="{{ app.url }}"/>
   <!-- <link rel="amphtml" href="*.amp'/> -->
 
+  {# @see: https://andrejgajdos.com/how-to-create-a-link-preview/ #}
   <link rel="image_src" href="{{ app.url }}/images/baythium-ecosystem.png"/>
 
   <link rel="alternate" hreflang="en" href="{{ app.url }}/"/>
