--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -14,7 +14,7 @@
 
 <!doctype html>
 
-<html lang="{{ app.locale }}" prefix="og:http://ogp.me/ns#" class="baythium-aspectus baythium-aspectus--light no-js">
+<html lang="{{ app.locale }}" dir="ltr" prefix="og:http://ogp.me/ns#" class="baythium-aspectus baythium-aspectus--light no-js">
   {% include "_partials/head.njk" %}
 
   <body id="app">
