--- a/src/about.njk
+++ b/src/about.njk
@@ -32,6 +32,8 @@
         <p class="headline__description"></p>
       </div>
 
+      {{ app.name }} provides solution for archiving your large-scale infrastructure data using a powerful and lightweight command-line tool.
+
     </div>
   </div>
 
