--- a/src/contribution.njk
+++ b/src/contribution.njk
@@ -38,6 +38,9 @@
         <p>So, fork the project, create a feature branch and send us a pull request.</p>
         <p>In any case, we appreciate any assistance because without you and the open source community this project <b>WOULD NOT</b> be possible.</p>
         <p>Before you get started, please familiarize yourself with the project and its demanding standards.</p>
+
+        <h3>Bug Fixes</h3>
+        <p>If you have some problems or proposals, please <a rel="noopener noreferrer" target="_blank" href="https://github.com/damien-bayes/baythium-packer_client/issues">open an issue<span class="icon icon--external-link"></span></a> including a log error and we will try to fix it as soon as possible in accordance with the project priorities.</p>
       </div>
 
     </div>
