Eleventy Config Changes

--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -89,7 +89,7 @@
     {% if app.environment == "development" %}
       <script>{{ js | safe }}</script>
     {% else %}
-      <script>{{ js | minifyJs | safe }}</script>
+      <script>{{ js | minifiedJs | safe }}</script>
     {% endif %}
   </body>
 </html>
