--- a/src/change-logs.njk
+++ b/src/change-logs.njk
@@ -28,7 +28,7 @@
         <p class="headline__description"></p>
       </div>
 
-      {% changelog filePath=page.inputPath %}
+      {% changeLog filePath=page.inputPath %}
 
     </div>
   </div>
