--- a/src/_includes/_partials/app-footer.njk
+++ b/src/_includes/_partials/app-footer.njk
@@ -7,7 +7,7 @@
 #}
 
 <footer class="app-footer">
-  <div class="container-1">
+  <div class="container">
 
     <!-- Deck 1: Language Switcher -->
     <div class="language-switcher mb--5">
