--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -71,6 +71,7 @@
     -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163071822-1"></script>
     <script async src="//fast.appcues.com/70842.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.0/dist/umd/popper.min.js"></script>
 
     {# CUSTOM IMPORTS #}
     <script src="/js/baythium-aspectus.min.js"></script>
