--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -70,7 +70,7 @@
       WARNING: For best practice, establish early connections to important third-party origins
     -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163071822-1"></script>
-    <script async src="//fast.appcues.com/70842.js"></script>
+    <!-- <script async src="//fast.appcues.com/70842.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.0/dist/umd/popper.min.js"></script>
 
     {# CUSTOM IMPORTS #}
@@ -78,7 +78,7 @@
 
     {% if javascripts %}
       {% for javascript in javascripts %}
-        <script src="{{ javascript }}"></script>
+        <script type="module" src="{{ javascript }}"></script>
       {% endfor %}
     {% endif %}
 
