--- a/src/index.njk
+++ b/src/index.njk
@@ -8,7 +8,7 @@
   locale: "en",
   description: "Large-scale and secure folder and file archiver for automating your infrastructure",
   stylesheets: [],
-  javascripts: ["/js/baythium-stargazer.js"]
+  javascripts: ["/js/home.js"]
 }
 ---
 
@@ -102,7 +102,8 @@
         <!-- Subdeck 1 -->
         <div class="column__sm--4 text--center">
           <a href="https://github.com/damien-bayes/baythium-packer_client" target="_blank" rel="noopener noreferrer" class="button button--secondary mb--2">Join Us On Github<span class="icon icon--external-link"></span></a>
-          <p class="display--none">Stars: <span id="starsCount">0</span></p>
+          {# Stargazer #}
+          <p class="display--none">Stars: <span data-stargazer data-stargazer-username="damien-bayes" data-stargazer-repository="baythium-packer_client">0</span></p>
         </div>
 
         <!-- Subdeck 2 -->
