--- a/src/_includes/_partials/head.njk
+++ b/src/_includes/_partials/head.njk
@@ -102,4 +102,6 @@
       <link href="{{ style }}" rel="stylesheet"/>
     {% endfor %}
   {% endif %}
+
+  <script type="module" src="/js/modules/web-components/index.js" defer></script>
 </head>
