--- a/src/index.njk
+++ b/src/index.njk
@@ -23,6 +23,8 @@
 <!-- Section -->
 <section class="section home">
 
+  <x-foo-shadowdom>Hello World</x-foo-shadowdom>
+
   <!-- Card (Deck 1) -->
   <div class="card home__main-card">
     <div class="card__body">
