Shadow DOM Integration

--- a/src/contact.njk
+++ b/src/contact.njk
@@ -32,6 +32,8 @@
         <p class="headline__description">We are committed to open communication with our community, and we welcome inquiries and feedback of all kinds.</p>
       </div>
 
+      <bth-info title="Custom Component"></bth-info>
+
     </div>
   </div>
 
