--- a/src/styles/custom-baythium-aspectus.scss
+++ b/src/styles/custom-baythium-aspectus.scss
@@ -2,7 +2,7 @@
  * Custom Baythium Aspectus
  *
  * File: /src/styles/custom-baythium-aspectus.scss
- * Project: Bayesian Packer Client
+ * Project: Baythium Packer Client
  * Organization: Baythium Ecosystem: https://baythium.com
  */
 
