--- a/src/_includes/_partials/patch-note.njk
+++ b/src/_includes/_partials/patch-note.njk
@@ -7,11 +7,11 @@
 #}
 
 <!-- Card -->
-<div class="card mr__md--2">
+<div class="card">
   <div class="card__body">
 
     <!-- Headline -->
-    <div class="headline">
+    <div class="headline headline--labeled">
       <h2 class="headline__title">Recent Patch Notes</h2>
     </div> 
 
