--- a/src/docs/getting-started/index.njk
+++ b/src/docs/getting-started/index.njk
@@ -15,7 +15,7 @@
     <div class="card__body">
 
       <!-- Headline -->
-      <div class="headline headline--xl">
+      <div class="headline headline--xl headline--labeled">
         <h1 class="headline__title">{{ title }}</h1>
         <p class="headline__description"></p>
       </div>
