--- a/src/docs/index.njk
+++ b/src/docs/index.njk
@@ -28,7 +28,7 @@
     <div class="card__body">
 
       <!-- Headline -->
-      <div class="headline headline--xl">
+      <div class="headline headline--xl headline--labeled">
         <h1 class="headline__title">Docs</h1>
         <p class="headline__description">Learn how to start using a command-line tool to cover your needs.</p>
       </div>
