--- a/src/contribution.njk
+++ b/src/contribution.njk
@@ -37,7 +37,7 @@
         <p>All appropriate code contributions including those of people having commit access <b>MUST</b> go through a pull request and be approved by a core developer before being merged. This allows us to ensure proper review of all the code.</p>
         <p>So, fork the project, create a feature branch and send us a pull request.</p>
         <p>In any case, we appreciate any assistance because without you and the open source community this project <b>WOULD NOT</b> be possible.</p>
-        <p>We understand that contributions to Baythium should be easy and accessible for everyone so before you get started, please familiarize yourself with the project and its demanding standards.</p>
+        <p>We understand that contributions to Baythium <b>SHOULD BE</b/> easy and accessible for everyone so before you get started, please familiarize yourself with the project and its demanding standards.</p>
 
         <h3>Bug Fixes</h3>
         <p>If you have some problems or proposals, please <a rel="noopener noreferrer" target="_blank" href="https://github.com/damien-bayes/baythium-packer_client/issues">open an issue<span class="icon icon--external-link"></span></a> including a log error and we will try to fix it as soon as possible in accordance with the project priorities.</p>
