--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -62,16 +62,16 @@
     </div>
     #}
 
-    {# THIRD-PARTY IMPORTS #}
-    <!-- <script src="https://cdn.optimizely.com/js/6721bcf5-449a-48f1-80c9-2627acf496ee.js"></script> -->
+    {# THIRD-PARTY SCRIPTS #}
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.0/dist/umd/popper.min.js"></script>
     <!--
       Global site tag (gtag.js) - Google Analytics
-
       WARNING: For best practice, establish early connections to important third-party origins
     -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163071822-1"></script>
+    <script src="https://www.google.com/recaptcha/api.js"></script>
+    <!-- <script src="https://cdn.optimizely.com/js/6721bcf5-449a-48f1-80c9-2627acf496ee.js"></script> -->
     <!-- <script async src="//fast.appcues.com/70842.js"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.0/dist/umd/popper.min.js"></script>
 
     {# CUSTOM IMPORTS #}
     <script src="/js/baythium-aspectus.min.js"></script>
