--- a/src/contact.njk
+++ b/src/contact.njk
@@ -32,7 +32,44 @@
         <p class="headline__description">We are committed to open communication with our community, and we welcome inquiries and feedback of all kinds.</p>
       </div>
 
-      <bth-info title="Custom Component"></bth-info>
+      <!-- <bth-info title="Custom Component"></bth-info> -->
+
+      <form
+        class="form"
+        action="https://getform.io/f/5278fd78-0f44-474b-bf7f-1ec1102d861d"
+        method="post"
+        accept-charset="UTF-8"
+        enctype="multipart/form-data">
+
+        <!-- Input: Name -->
+        <div class="form-collection">
+          <label for="name">Name</label>
+          <input type="text" name="name" id="name" required="required"/>
+        </div>
+
+        <!-- Input: Email -->
+        <div class="form-collection">
+          <label for="email">Email</label>
+          <input
+            type="email"
+            name="email"
+            id="email"
+            required="required"
+            placeholder="you@example.com"/>
+          <small class="form-text">We won't share your email with anyone else</small>
+        </div>
+
+        <!-- Input: Message -->
+        <div class="form-collection">
+          <label for="message">Message</label>
+          <textarea name="message" id="message" rows="3" required="required"></textarea>
+        </div>
+
+        <!-- Google reCAPTCHA -->
+        <div class="g-recaptcha mb--5" data-sitekey="6Lc-EM4ZAAAAAPATY1pNUhofj7_hKQBLGLWTeXBR"></div>
+
+        <button type="submit" class="button button--primary button--rounded">Send</button>
+      </form>
 
     </div>
   </div>
