--- a/src/_includes/_partials/head.njk
+++ b/src/_includes/_partials/head.njk
@@ -12,6 +12,10 @@
 
   <!-- <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1"/> -->
   <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <!--
+  <meta name="HandheldFriendly" content="true"/>
+  <meta name="MobileOptimized" content="320"/>
+  -->
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
