--- a/src/_includes/_partials/head.njk
+++ b/src/_includes/_partials/head.njk
@@ -29,6 +29,8 @@
   <meta name="target" content="all"/>
   <meta name="revisit-after" content="3 days"/>
 
+  <!-- <meta name="referrer" content="strict-origin-when-cross-origin"/> -->
+
   <!-- Change the color of the header and address bar -->
   <!-- Chrome, Firefox OS and Opera -->
   <meta name="theme-color" content="#ffffff"/>
