--- a/src/_includes/_partials/head.njk
+++ b/src/_includes/_partials/head.njk
@@ -91,7 +91,12 @@
   <link rel="dns-prefetch" href="{{ app.authUrl }}"/>
   -->
 
-  {# NOTE: Start prefetching cacheable resources #}
+  {#
+    Start prefetching cacheable resources
+
+    NOTE: Silently preload site contents to project a more fluid,
+    seamless web experience
+  #}
   <!-- <link rel="prefetch" href="{{ app.url }}/images/network-lines.svg"/> -->
 
   {# 
