--- a/src/contact.njk
+++ b/src/contact.njk
@@ -56,7 +56,10 @@
             type="text"
             name="name"
             id="name"
-            required="required"/>
+            required="required"
+            onpaste="return false;"
+            ondrop="return false;"
+            autocomplete="off"/>
         </div>
 
         <!-- Input: Email -->
