--- a/src/_includes/_partials/app-header.njk
+++ b/src/_includes/_partials/app-header.njk
@@ -29,7 +29,7 @@
       <div>
         <div class="app-header__brand">
           <a href="/">
-            <img src="{{ '/' | url }}images/baythium-ecosystem-1.svg" alt="{{ app.name }}"/>
+            <img src="{{ '/' | url }}images/baythium-ecosystem-1.svg" alt="{{ app.name }}" loading="lazy"/>
             {{ app.name }}
           </a>
         </div>
